--- a/app/src/main/res/layout/activity_monitor3.xml
+++ b/app/src/main/res/layout/activity_monitor3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Monitor3Activity">
 
     <TextView
         android:id="@+id/sample_text"
@@ -20,18 +20,20 @@
         android:id="@+id/startMonitor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="方案1"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="监控死锁"
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="398dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/sample_text"/>
 
     <Button
         android:id="@+id/startAnr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="最终方案"
+        android:text="卡顿导致ANR"
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="398dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startMonitor" />
+        app:layout_constraintTop_toBottomOf="@+id/sample_text"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
